# DataDreamer

./: .cirun.yml  .flake8  .gitignore  LICENSE.txt  README.md  docs.sh  format.sh  package.sh  package_publish.sh  project.env  pyproject.toml  run.sh
.cluster/: _command.sh  _setup.sh  args_log.sh  full_reset.sh  install_log.sh  reset.sh  reset_venv.sh  series_log.sh  stdout_log.sh  submission_log.sh
.cluster/direct/: _direct_config.sh  _direct_env.sh  interactive_submit.sh  status.sh
.cluster/sge/: _qsub_config.sh  cancel.sh  cancel_all.sh  htop.sh  interactive_submit.sh  status.sh
.cluster/slurm/: _sbatch_config.sh  cancel.sh  cancel_all.sh  htop.sh  nvidia-smi.sh  shell.sh  status.sh
.github/workflows/: cla.yml  release.yml  tests.yml
docs/: .gitignore
docs/source/: conf.py  docstrings.py  index.rst
scripts/: docs.sh  format.sh  lint.sh  package.sh  package_publish.sh  project.env  run.sh
scripts/.cluster/: .gitignore  _boot.sh  _command.sh  _lock.sh  _setup.sh  config_log.sh  reset.sh  reset_venv.sh  stderr_log.sh  tag.sh
scripts/.githooks/: post-checkout  pre-commit
signatures/version1/: cla.json
src/: .env  .gitignore  .secrets.template.env  __cli__.py  __init__.py  __main__.py  datadreamer.py  requirements-accelerator-device.txt  requirements-cpu.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  test.sqlite
src/_cachable/: __init__.py  _cachable.py  _parallel_cachable.py
src/_patches/: datasets_reset_state_hack.py  setfit_import_hack.py
src/datasets/: __init__.py  dataset.py  datasets.py  utils.py
src/embedders/: __init__.py  embedder.py  openai_embedder.py  parallel_embedder.py  sentence_transformers_embedder.py  together_embedder.py
src/errors/: __init__.py
src/llms/: __init__.py  _chat_prompt_templates.py  _litellm.py  _llm_api.py  _tokenizers.py  ai21.py  anthropic.py  bedrock.py  cohere.py  ctransformers.py  google_ai_studio.py  hf_api_endpoint.py  hf_transformers.py  llm.py  mistral_ai.py  openai.py  openai_assistant.py  palm.py  parallel_llm.py  petals.py  together.py  vertex_ai.py  vllm.py
src/logging/: __init__.py  logger.py
src/pickling/: __init__.py  pickle.py
src/project/: __init__.py  builtin_tasks.py  debug.py  devices.py  environment.py  pennnlp.py  persistent_storage.py  report.py  serve.py
src/retrievers/: __init__.py  embedding_retriever.py  parallel_retriever.py  retriever.py
src/steps/: __init__.py  data_card.py  step.py  step_background.py  step_export.py  step_operations.py  step_output.py  trace_info.py
src/task_models/: __init__.py  hf_classification_task_model.py  parallel_task_model.py  task_model.py
src/tasks/: __init__.py
src/tests/: conftest.py  test_cli.py  test_datadreamer.py  test_package.py
src/trainers/: __init__.py  _train_hf_base.py  train_hf_classifier.py  train_hf_dpo.py  train_hf_finetune.py  (+6 more)
(+134 files in other folders)
