[tool.poetry]
name = "ml_project_template"
version = "0.1.0"
description = "A ML project template."
license = "MIT"
authors= [
    "Ajay Patel <me@ajayp.app>"
]
maintainers = [
    "Ajay Patel <me@ajayp.app>"
]
readme = "README.md"
homepage = "https://ml-project-template.github.io/"
repository = "https://github.com/AjayP13/ml-project-template"
documentation = "https://ml-project-template.github.io/docs/"
keywords = ["machine learning", "nlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
    {include = "ml_project_template"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
poetry = "1.4.2"

[tool.pytest.ini_options]
addopts = "-v --cov=src"
filterwarnings = ["ignore::DeprecationWarning:jupyter_client.*:"]

[tool.coverage.run]
omit = ["src/project/*", "src/tests/*"]

[tool.docs.sh]
docs_author = "Ajay Patel"
docs_author_website = "https://ajayp.app"
autodoc_exclude_paths = "./project/[!_]*.py ./tests/*" # Space-separated, fnmatch-style